<resources>
    <string name="app_name">Slagalica</string>
    <string name="title_profile">Profil korisnika</string>
    <string name="label_username">Korisničko ime:</string>
    <string name="label_email">Email:</string>
    <string name="label_tokens">Broj tokena:</string>
    <string name="label_stars">Ukupno zvezda:</string>
    <string name="label_league">Liga:</string>
    <string name="label_region">Region:</string>
    <string name="btn_change_avatar">Promeni avatar</string>
    <string name="btn_logout">Odjavi se</string>
    <string name="title_statistics">Statistika</string>
    <string name="stat_games_played">Odigrano igara: %1$d</string>
    <string name="stat_wins">Pobede: %1$d (%2$.1f%%)</string>
    <string name="stat_quiz_accuracy">Ko zna zna tačnost: %1$.1f%%</string>
    <string name="stat_matching_accuracy">Spojnice uspešnost: %1$.1f%%</string>
    <string name="stat_avg_score">Prosečni bodovi: %1$.1f</string>
    <string name="label_qr_code">QR Kod:</string>

    <string name="title_ko_zna_zna">Ko zna zna</string>
    <string name="label_question_count">Pitanje: %1$d/5</string>
    <string name="label_score_player">Ja: %1$d</string>
    <string name="label_score_opponent">Protivnik: %1$d</string>
    <string name="label_timer">Vreme: %1$ds</string>
    <string name="game_over">Kraj igre!</string>
    <string name="score_won">Osvojeno bodova: %1$d</string>

    <string name="title_spojnice">Spojnice</string>
    <string name="label_round">Runda: %1$d</string>
    <string name="btn_confirm">POTVRDI</string>
    <string name="btn_next_round">SLEDEĆA RUNDA</string>

    <string name="btn_profile">Profil</string>
    <string name="label_me">Ja</string>
    <string name="label_opponent">Protivnik</string>
    <string name="label_score_format">%1$d bodova</string>
    <string name="btn_back_home">Nazad na početnu</string>
    <string name="btn_scan_qr">Skeniraj QR kod</string>
    <string name="msg_friend_added">Prijatelj dodat!</string>
    <string name="btn_friends">Prijatelji</string>
    <string name="btn_regions">Regioni</string>
    <string name="title_friends">Lista prijatelja</string>
    <string name="title_regions">Mapa regiona</string>
    <string name="label_search_users">Pretraga korisnika</string>
    <string name="msg_league_up">Čestitamo! Napredovali ste u ligu: %1$s</string>
    <string name="msg_league_down">Nazadovali ste u ligu: %1$s</string>
    <string name="label_league_rank">Ligaški rang: %1$s</string>
    <string name="btn_invite">Pozovi na partiju</string>
    <string name="msg_invite_sent">Poziv poslat!</string>
    <string name="msg_invite_received">Poziv od %1$s za prijateljsku partiju</string>
    <string name="btn_accept">Prihvati</string>
    <string name="btn_decline">Odbij</string>
    <string name="title_rang_lista">Rang lista</string>
    <string name="btn_nedeljna">Nedeljna</string>
    <string name="btn_mesecna">Mesečna</string>
    <string name="btn_rang_lista">Rang lista</string>
    <string name="nagrada_cestitamo">Čestitamo!</string>
    <string name="nagrada_ukupno_tokena">Ukupno nagrađeno: %1$d tokena</string>
    <string name="btn_zatvori">Zatvori</string>
    <string name="btn_test_simulacija">[TEST] Simuliraj kraj ciklusa</string>
    <string name="title_dnevne_misije">Dnevne misije</string>
    <string name="btn_dnevne_misije">Dnevne misije</string>
    <string name="misija_pobeda">Pobedi u partiji</string>
    <string name="misija_poruka_cet">Pošalji poruku u četu</string>
    <string name="misija_prijateljska">Odigraj prijateljsku partiju</string>
    <string name="misija_turnir">Pobedi u turniru (uskoro)</string>
    <string name="misija_bonus">Bonus: sve 4 misije!</string>
    <string name="google_maps_key" translatable="false">UNESI_MAPS_API_KLJUC</string>
    <string name="btn_ko_zna_zna">Ko zna zna</string>
    <string name="btn_spojnice">Spojnice</string>
    <string name="label_monthly_region_leaderboard">Mesečna rang lista regiona</string>
    <string name="label_region_active_players">Aktivni igrači: %1$d</string>
    <string name="label_region_total_players">Ukupno korisnika: %1$d</string>
    <string name="label_region_top3_stats">Top 3 mesta: 1.%1$dx, 2.%2$dx, 3.%3$dx</string>

    <string name="mock_question">Glavni grad Srbije je?</string>
    <string name="mock_ans1">Beograd</string>
    <string name="mock_ans2">Novi Sad</string>
    <string name="mock_ans3">Niš</string>
    <string name="mock_ans4">Kragujevac</string>

    <string name="mock_left1">Srbija</string>
    <string name="mock_right1">Beograd</string>
    <string name="mock_left2">Francuska</string>
    <string name="mock_right2">Pariz</string>
    <string name="mock_left3">Nemačka</string>
    <string name="mock_right3">Berlin</string>
    <string name="mock_left4">Italija</string>
    <string name="mock_right4">Rim</string>
    <string name="mock_left5">Španija</string>
    <string name="mock_right5">Madrid</string>
</resources>